src/app/components/blog-content/blog-content.module.scss
.container {
  padding: 32px 16px;
  color: var(--primary-font-dark);

  h1,
  h2 {
    text-transform: capitalize;
  }

  h1 {
    font-size: 36px;
    margin: 16px 0;
  }

  h2 {
    font-size: 24px;
  }

  p {
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
  }

  img {
    width: 100%;
    border-radius: 12px;
  }

  .blogInfo {
    display: flex;
    gap: 16px;
    margin-bottom: 12px;

    .blogDetail {
      display: flex;
      justify-content: flex-start;
      align-items: center;

      &:last-child {
        justify-content: flex-end;
      }

      p {
        font-size: 16px;
        line-height: 24px;
        font-weight: 400;
        margin-bottom: 0;
      }
    }

    .icon {
      width: 16px;
      margin-right: 6px;
    }
  }

  .socialMedia {
    display: flex;
    align-items: center;
    gap: 12px;
    margin-bottom: 32px;

    .icon {
      width: 18px;
    }
  }

  .postContent {
    display: flex;
    flex-direction: column;
    gap: 24px;
  }
}

